[gd_scene load_steps=12 format=3 uid="uid://cskxh50ifkepx"]

[ext_resource type="Script" path="res://root.gd" id="1_ura10"]
[ext_resource type="Script" path="res://bawx.gd" id="2_dob0l"]
[ext_resource type="Texture2D" uid="uid://bpmfeojdh73xj" path="res://anim-controls-frame1.png" id="3_t0f72"]
[ext_resource type="Texture2D" uid="uid://dvem02ka8sh11" path="res://anim-controls-frame2.png" id="4_qehpu"]

[sub_resource type="Curve2D" id="Curve2D_gecn7"]
_data = {
"points": PackedVector2Array(-53, 98.7618, 53, -98.7618, 0, 145, -163, 15, 163, -15, 413, 6, -100, -35.6357, 100, 35.6357, 758, 17, 1, -148.652, -1, 148.652, 1045, 237, 91, 27.4904, -91, -27.4904, 868, 484, 72, 65.1624, -72, -65.1624, 669, 242, 62, -52.9445, -62, 52.9445, 389, 224, 79, 0, -79, 0, 203, 467, -36, 101.816, 36, -101.816, 0, 145)
}
point_count = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wcsmq"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_px5sf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_673o6"]
radius = 2.80125

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtak6"]

[sub_resource type="SystemFont" id="SystemFont_d44ap"]
font_names = PackedStringArray("IntelOne Mono", "Monospace")

[sub_resource type="SpriteFrames" id="SpriteFrames_rjvxm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_t0f72")
}, {
"duration": 1.0,
"texture": ExtResource("4_qehpu")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="root" type="Node2D"]
script = ExtResource("1_ura10")

[node name="rail" type="Path2D" parent="."]
unique_name_in_owner = true
position = Vector2(119.854, 108.355)
scale = Vector2(1, 0.982161)
curve = SubResource("Curve2D_gecn7")

[node name="PathFollow2D" type="PathFollow2D" parent="rail"]
unique_name_in_owner = true
position = Vector2(0, 145)
rotation = -1.07826

[node name="cooldown_timer" type="Timer" parent="rail/PathFollow2D"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="outline" type="Line2D" parent="rail/PathFollow2D"]
unique_name_in_owner = true
position = Vector2(0, -14)
scale = Vector2(0.9, 0.9)
points = PackedVector2Array(19.9752, -7.76814, 0, 39.9504, -20.265, -8.43086, 0, -1.10973)
closed = true
width = 3.0

[node name="bullet_spawner" type="Marker2D" parent="rail/PathFollow2D/outline"]
unique_name_in_owner = true
position = Vector2(0, 45.4991)
scale = Vector2(1.10973, 1.10973)

[node name="fill" type="Polygon2D" parent="rail/PathFollow2D/outline"]
show_behind_parent = true
clip_children = 1
polygon = PackedVector2Array(19.4883, -7.33243, 0.331116, 38.2122, -20.8204, -8.37073, 0.988998, -1.1832)

[node name="cooldown_bar" type="ProgressBar" parent="rail/PathFollow2D/outline/fill"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.45983
offset_top = -2.6953
offset_right = 61.4598
offset_bottom = 44.3047
grow_horizontal = 2
grow_vertical = 2
rotation = 1.57079
pivot_offset = Vector2(18, 5)
theme_override_styles/background = SubResource("StyleBoxFlat_wcsmq")
theme_override_styles/fill = SubResource("StyleBoxFlat_px5sf")
max_value = 0.5
value = 0.5
show_percentage = false

[node name="player_area" type="Area2D" parent="rail/PathFollow2D" groups=["player"]]

[node name="player_collider" type="CollisionShape2D" parent="rail/PathFollow2D/player_area"]
shape = SubResource("CircleShape2D_673o6")

[node name="bawx" type="Area2D" parent="." groups=["bawx"]]
position = Vector2(276, 330)
rotation = 0.375455
scale = Vector2(1.2, 1.2)
script = ExtResource("2_dob0l")
data_input = "{
	\"multiplier\": 2, 	\"duration_sec\": 1
}"

[node name="CollisionShape2D" type="CollisionShape2D" parent="bawx"]
shape = SubResource("RectangleShape2D_wtak6")

[node name="Polygon2D" type="Polygon2D" parent="bawx"]
color = Color(0.854902, 0.878431, 0.0784314, 1)
polygon = PackedVector2Array(-10, -10, -10, 10, 10, 10, 10, -10)

[node name="bawx2" type="Area2D" parent="." groups=["bawx"]]
position = Vector2(676.854, 163.355)
rotation = -0.288306
scale = Vector2(1.2, 1.2)
script = ExtResource("2_dob0l")
data_input = "{
	\"multiplier\": 3, 	\"duration_sec\": 1
}"

[node name="CollisionShape2D" type="CollisionShape2D" parent="bawx2"]
shape = SubResource("RectangleShape2D_wtak6")

[node name="Polygon2D" type="Polygon2D" parent="bawx2"]
color = Color(0.853307, 0.88, 0.0792, 1)
polygon = PackedVector2Array(-10, -10, -10, 10, 10, 10, 10, -10)

[node name="bawx3" type="Area2D" parent="." groups=["bawx"]]
position = Vector2(1000, 358)
rotation = -0.288306
scale = Vector2(1.2, 1.2)
script = ExtResource("2_dob0l")
data_input = "{
	\"multiplier\": 2, 	\"duration_sec\": 1
}"

[node name="CollisionShape2D" type="CollisionShape2D" parent="bawx3"]
shape = SubResource("RectangleShape2D_wtak6")

[node name="Polygon2D" type="Polygon2D" parent="bawx3"]
color = Color(0.853307, 0.88, 0.0792, 1)
polygon = PackedVector2Array(-10, -10, -10, 10, 10, 10, 10, -10)

[node name="lap_time_display" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 535.0
offset_top = 4.0
offset_right = 741.0
offset_bottom = 38.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.707967, 0.707967, 0.707966, 1)
theme_override_constants/line_spacing = -3
theme_override_fonts/font = SubResource("SystemFont_d44ap")
theme_override_font_sizes/font_size = 32
text = "MY BEST: 7.88s"

[node name="hint_controls" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.35, 0.35, 0.35, 1)
position = Vector2(617, 651)
sprite_frames = SubResource("SpriteFrames_rjvxm")
speed_scale = 0.5

[node name="background" type="ColorRect" parent="."]
z_index = -10
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="lap_end_area" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="lap_end_collider" type="CollisionPolygon2D" parent="lap_end_area"]
polygon = PackedVector2Array(118, 253, 138, 277, 183, 420, 141, 434, 92, 277)
